<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <Button
        android:id="@+id/physics"
        android:layout_width="139dp"
        android:layout_height="73dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="62dp"
        android:text="@string/physics"
        app:layout_constraintBottom_toTopOf="@+id/out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/math"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/math"
        android:layout_width="148dp"
        android:layout_height="74dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="62dp"
        android:text="@string/math"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textos"
        app:layout_constraintEnd_toStartOf="@+id/physics"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/textos"
        android:layout_width="139dp"
        android:layout_height="73dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="15dp"
        android:text="@string/text"
        app:layout_constraintEnd_toStartOf="@+id/out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/math" />

    <Button
        android:id="@+id/out"
        android:layout_width="137dp"
        android:layout_height="73dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="42dp"
        android:text="@string/Exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textos"
        app:layout_constraintTop_toBottomOf="@+id/physics" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="222dp"
        android:layout_height="181dp"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/casita" />

</androidx.constraintlayout.widget.ConstraintLayout>