<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="106dp"
        android:layout_height="33dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="5dp"
        android:text="@string/user"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ing_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="168dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/icono_cuenta" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="141dp"
        android:layout_height="74dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toTopOf="@+id/barra_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresar" />

    <EditText
        android:id="@+id/ing_usuario"
        android:layout_width="247dp"
        android:layout_height="49dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/terminos_condiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="132dp"
        android:text="@string/terminos_condiciones"
        app:layout_constraintBottom_toTopOf="@+id/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="231dp"
        android:layout_marginBottom="15dp"
        android:text="@string/Password"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ing_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ing_usuario" />

    <Button
        android:id="@+id/ingresar"
        android:layout_width="136dp"
        android:layout_height="80dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Ingresar"
        app:layout_constraintBottom_toTopOf="@+id/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terminos_condiciones" />

    <EditText
        android:id="@+id/ing_password"
        android:layout_width="249dp"
        android:layout_height="44dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/terminos_condiciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/revelar"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:layout_marginTop="68dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ing_usuario"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img" />

    <ProgressBar
        android:id="@+id/barra_p"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
        android:progressDrawable="@android:drawable/progress_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelar" />

</androidx.constraintlayout.widget.ConstraintLayout>